Completed Final Version 2

--- a/templates/index.html
+++ b/templates/index.html
@@ -239,7 +239,7 @@
     </div>
 
     <div class="card chart-container">
-      <div class="card-label" style="margin-bottom: 20px;">Oscilloscope (ADC 34)</div>
+      <div class="card-label" style="margin-bottom: 20px;">Voltage GRAPH</div>
       <div style="flex: 1; min-height: 0;"> <canvas id="liveChart"></canvas>
       </div>
     </div>
