--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,7 @@
     <div class="card">
       <div class="card-label">VCC Voltage</div>
       <div class="value"><span id="vText">0.0000</span><span class="unit">V</span></div>
-      <div id="vStatus" style="font-size: 10px; color: var(--red">CLOSE</div>
+      <div id="vStatus" style="font-size: 10px; color: var(--red)">CLOSE</div>
     </div>
 
     <div class="card">
